--- a/package.json
+++ b/package.json
@@ -15,13 +15,11 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
-    "cors": "^2.8.5",
     "ejs": "^2.6.1",
-    "express": "^4.16.3",
+    "express": "^4.18.2",
     "express-handlebars": "^3.0.0",
-    "mysql": "^2.18.1",
-    "mysql2": "^3.1.0",
+    "mysql2": "^1.6.1",
     "pug": "^2.0.3",
-    "sequelize": "^6.28.0"
+    "sequelize": "^5.0.0-beta.11"
   }
 }
